# warpm-paraview-plugin

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  design_docs.md
Plugin/: CMakeLists.txt  paraview.plugin
Plugin/Reader/: CMakeLists.txt  WARPMReader.xml  vtk.module  vtkWARPMPhaseSpaceFileSeriesReader.cxx  vtkWARPMPhaseSpaceFileSeriesReader.h  vtkWARPMPhaseSpaceReader.cxx  vtkWARPMPhaseSpaceReader.h  vtkWARPMReader.cxx  vtkWARPMReader.h
